fixed footer alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -328,7 +328,7 @@ p code {
 
 .footer-content {
     min-height: 20px;
-    padding: 20px;
+    padding: 20px 0;
     color: white;
     font-size: 1.4rem;
 }
